# mcdr-github

./: .gitignore  GitHub.py  __init__.py  pyproject.toml
MCDRGitHub/: GitHub.py  __init__.py
MCDRGitHub/tests/: test_github.py
MCDRGitHub/typings/MCDRGitHub/: GitHubCardRequest.py  GitHubProjectCreator.py  GitHubProjectInfo.py  GitHubProjectsRequest.py  ParameterEnum.py  __init__.py
tests/: test_github.py
typings/: GitHubCardInfo.py  GitHubCardsRequest.py  GitHubCardsState.py  GitHubColumnInfo.py  GitHubColumnRequest.py  GitHubColumnsRequest.py  GitHubProjectRequest.py  GitHubUserInfo.py
