[tool.poetry]
name = "mcdrgithub"
version = "0.1.0"
description = ""
authors = ["Yi-Jyun Pan <pan93412@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
